--- a/src/hotel/management/system/Employer/ManageRoom.form
+++ b/src/hotel/management/system/Employer/ManageRoom.form
@@ -47,7 +47,10 @@
                           <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
-                          <Component id="jButton2" min="-2" max="-2" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <Component id="jButton2" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
+                          </Group>
                           <Component id="jTextField1" alignment="0" max="32767" attributes="0"/>
                           <Component id="jComboBox1" alignment="0" pref="259" max="32767" attributes="0"/>
                           <Component id="jComboBox2" alignment="0" max="32767" attributes="0"/>
